# discord-tg-bridge

./: .gitignore  Cargo.toml  README.md  README.ru.md  i18n_compile.sh
locales/: en.pot  ru.po
src/: config.rs  discord.rs  main.rs
